@@ -1,3 +1,7 @@
+Sun Oct  3 16:11:01 CEST 2004 Daniel Veillard <veillard@redhat.com>
+
+	* libgamin/gam_api.c: extra debug on client API
+
 Sun Oct  3 16:03:56 CEST 2004 Daniel Veillard <veillard@redhat.com>
 
 	* server/gam_poll.c server/gam_subscription.c: cleanup, debug
